--- a/fastJSON/fastJSON.csproj
+++ b/fastJSON/fastJSON.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="dynamic.cs" />
     <Compile Include="Getters.cs" />
     <Compile Include="Formatter.cs" />
     <Compile Include="JsonSerializer.cs" />
