--- a/fastJSON.nuspec
+++ b/fastJSON.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>fastJSON</id>
-        <version>2.1.21.0</version>
+        <version>2.1.22.0</version>
         <title>fastJSON</title>
         <authors>mgholam</authors>
         <owners />
@@ -16,5 +16,6 @@
 	    <file src="output\net40\fastjson.dll" target="lib\net40\fastjson.dll" />
 		<file src="history.txt" target="lib\history.txt" />
 		<file src="readme.md" target="lib\readme.md" />
+   	    <file src="Howto.md" target="lib\Howto.md" />
     </files>
 </package>
