--- a/Consoletest/consoletest.csproj
+++ b/Consoletest/consoletest.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -72,6 +73,7 @@
     <ProjectReference Include="..\fastJSON\fastJSON.csproj">
       <Project>{207E91B1-C9F8-4913-88E1-3549EF5F3273}</Project>
       <Name>fastJSON</Name>
+      <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
