--- a/fastJSON.nuspec
+++ b/fastJSON.nuspec
@@ -16,8 +16,9 @@
 	    <file src="output\net40\fastjson.dll" target="lib\net40\fastjson.dll" />
 	    <file src="output\net4.0\fastjson.dll" target="lib\net4.0\fastjson.dll" />
 	    <file src="output\netstandard2.0\fastjson.dll" target="lib\netstandard2.0\fastjson.dll" />
-		<file src="history.txt" target="lib\history.txt" />
-		<file src="readme.md" target="lib\readme.md" />
+            <file src="output\netstandard2.0\fastJSON.deps.json" target="lib\netstandard2.0\fastJSON.deps.json" />
+            <file src="history.txt" target="lib\history.txt" />
+	    <file src="readme.md" target="lib\readme.md" />
    	    <file src="Howto.md" target="lib\Howto.md" />
     </files>
 </package>
