--- a/fastJSONcore/fastJSON.csproj
+++ b/fastJSONcore/fastJSON.csproj
@@ -2,19 +2,20 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net4.0</TargetFrameworks>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>2.1.0.0</Version>
     <FileVersion>2.1.34.0</FileVersion>
-    <Description>smallest fastest polymorphic json serializer</Description>
+    <Description>smallest fastest polymorphic json serializer. This is a fork of the fastJson from M. Gholam (https://www.codeproject.com/Articles/159450/fastJSON)</Description>
     <Copyright>2010-2018</Copyright>
-    <Authors>M. Gholam</Authors>
+    <Authors>Geocom Informatik AG</Authors>
     <PackageProjectUrl>https://www.codeproject.com/Articles/159450/fastJSON</PackageProjectUrl>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\fastJSON\fastJSON.snk</AssemblyOriginatorKeyFile>
+    <Company>Geocom Informatik AG</Company>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;NETSTANDARD2_0 net4</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;net4</DefineConstants>
     <OutputPath>..\output\</OutputPath>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
