--- a/fastJSON.nuspec
+++ b/fastJSON.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>fastJSON</id>
-    <version>2.2.0.0</version>
+    <version>2.2.1</version>
     <title>fastJSON</title>
     <authors>mgholam</authors>
     <owners />
@@ -11,11 +11,11 @@
     <description>smallest, fastest polymorphic JSON serializer</description>
   </metadata>
   <files>
-    <file src="output\net35\fastjson.dll" target="lib\net20\fastjson.dll" />
-    <file src="output\net35\fastjson.dll" target="lib\net35\fastjson.dll" />
-    <file src="output\net40\fastjson.dll" target="lib\net40\fastjson.dll" />
-    <file src="output\net4.0\fastjson.dll" target="lib\net4.0\fastjson.dll" />
-    <file src="output\netstandard2.0\fastjson.dll" target="lib\netstandard2.0\fastjson.dll" />
+    <file src="output\net35\fastjson.dll" target="lib\net20\fastJSON.dll" />
+    <file src="output\net35\fastjson.dll" target="lib\net35\fastJSON.dll" />
+    <file src="output\net40\fastjson.dll" target="lib\net40\fastJSON.dll" />
+    <file src="output\net4.0\fastjson.dll" target="lib\net4.0\fastJSON.dll" />
+    <file src="output\netstandard2.0\fastjson.dll" target="lib\netstandard2.0\fastJSON.dll" />
     <file src="output\netstandard2.0\fastJSON.deps.json" target="lib\netstandard2.0\fastJSON.deps.json" />
     <file src="history.txt" target="lib\history.txt" />
     <file src="readme.md" target="lib\readme.md" />
