--- a/fastJSONcore/fastJSON.csproj
+++ b/fastJSONcore/fastJSON.csproj
@@ -1,20 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net4.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;NET4</TargetFrameworks>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>2.1.0.0</Version>
-    <FileVersion>2.1.36.0</FileVersion>
+    <Version>2.2.0.0</Version>
+    <FileVersion>2.2.0.0</FileVersion>
     <Description>smallest fastest polymorphic json serializer</Description>
     <Copyright>2010-2018</Copyright>
     <Authors>M. Gholam</Authors>
     <PackageProjectUrl>https://www.codeproject.com/Articles/159450/fastJSON</PackageProjectUrl>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\fastJSON\fastJSON.snk</AssemblyOriginatorKeyFile>
+    <AssemblyVersion>2.2.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;NETSTANDARD2_0 net4</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NETSTANDARD2_0; NET4;</DefineConstants>
     <OutputPath>..\output\</OutputPath>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
