fixing case-mismatches w/filesystem that prevent compiles on case-sensitive platforms

--- a/Consoletest/consoletest.csproj
+++ b/Consoletest/consoletest.csproj
@@ -86,5 +86,5 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
